[a] Fixed Evaluation Waiting Room content spacing

--- a/src/games/arte-ruim/arte-ruim.scss
+++ b/src/games/arte-ruim/arte-ruim.scss
@@ -110,7 +110,9 @@
     border-radius: get-unit(2);
     border: 2px solid transparent;
 
-    transition: background-color 250ms, transform 250ms;
+    transition:
+      background-color 250ms,
+      transform 250ms;
 
     &:hover {
       transform: scale(0.95);
@@ -143,7 +145,9 @@
     box-sizing: border-box;
     cursor: pointer;
     border-radius: get-unit(2);
-    transition: background-color 250ms, transform 250ms;
+    transition:
+      background-color 250ms,
+      transform 250ms;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -312,6 +316,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  &__item {
+    margin-bottom: get-unit(2);
+  }
 
   &__card {
     background-color: get-color('white');
